--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tv-maze-client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://rzaniboni.github.io/tv-maze-client-react",
+  "homepage": "https://rzaniboni.github.io/tv-maze-client-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
